# Bandit_SFM

./: .gitignore  CLAUDE.md  README.md  __init__.py  bandit_feature_space_report (2).md  bandit_feature_space_report.md  dual_ucb_model.py  feature_space.py  random_training_features.py  rule_engine.py  state_and_scenario.py  train_runner.py  ucb_cpp_port.py  ucb_input_encoding.py
recommendation_agents/: CLAUDE.md  README.md  pyproject.toml  run.sh  run_feedback_margin_policy_fixed_radius_v1.sh  run_feedback_propagation_margin_policy_v1_grid.sh  run_v6_both_gpu0.sh  run_v6_candidate_all_data_gpu0.sh  run_v6_candidate_both_gpu0.sh  run_v6_neural_linear_sanity_check.sh  run_v6_neural_ucb_lite_ablation_cpu.sh  run_v6_neural_ucb_lite_ablation_gpu0.sh  setup.sh
recommendation_agents/docs/: app_category_agent_design_en.md  app_category_agent_design_zh.md  bandit_design_note_en.md  bandit_design_note_zh.md  bandit_feature_space_report.md  feedback_propagation_policy_v1_cases.json  global_action_space.json  offline_training_guide.md  offline_training_guide_EN.md  online_training_phase1_guide.md  phase2_feedback_propagation.md  phase2_multi_recommendation_scenarios.md  report_2026_03_26.md  report_2026_04_01.md  report_2026_04_10.md  scenario_recommendation_actions_v4.md  scenario_recommendation_actions_v5.md  scenario_recommendation_actions_v6.md  synthetic_bandit_v0_two_scenarios.jsonl  synthetic_bandit_v0_two_scenarios_firststep_no_triggers.jsonl
recommendation_agents/recommendation_agents/: __init__.py  catalog.py  cli.py  feature_space.py  in_between_relevance.py  linucb.py  (+7 more)
(+121 files in other folders)
