[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "recommendation-agents"
version = "0.1.0"
description = "V0 masked LinUCB scaffold for scenario-aware recommendation agents"
requires-python = ">=3.11"
dependencies = [
  "numpy>=2.0",
  "tensorboard",
]

[project.scripts]
recommendation-agents = "recommendation_agents.cli:main"

[tool.setuptools.packages.find]
where = ["."]
